// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StudyGrid Snapshots matches snapshot for IHP Model example 1`] = `
<div
  class="bg-parchment-light border-2 border-green-700/40 rounded-lg p-8 space-y-6 "
>
  <h4
    class="font-playfair text-2xl font-bold text-forest text-center"
  >
    The IHP Model: Integrated Humanities
  </h4>
  <p
    class="text-base text-charcoal/90 leading-relaxed"
  >
    The Integrated Humanities Program at the University of Kansas demonstrates poetic education in practice.
  </p>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-6"
  >
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-green-900"
      >
        What They Study:
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Homer, Virgil, Dante
        </li>
        <li>
          Gregorian chant, polyphony
        </li>
        <li>
          Plato, Aristotle, Aquinas
        </li>
        <li>
          Sacred art (Byzantine, medieval)
        </li>
        <li>
          Natural philosophy before modern science
        </li>
      </ul>
    </div>
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-green-900"
      >
        What They Don't Study (Yet):
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Career-focused majors
        </li>
        <li>
          Modern political theory
        </li>
        <li>
          Specialized STEM tracks
        </li>
        <li>
          Pop culture or current events
        </li>
        <li>
          Anything divorced from liturgical context
        </li>
      </ul>
    </div>
  </div>
  <p
    class="text-center text-sm text-charcoal/70 italic mt-4"
  >
    First integration, then specialization. First wonder, then analysis.
  </p>
</div>
`;

exports[`StudyGrid Snapshots matches snapshot with neutral variant 1`] = `
<div
  class="bg-parchment-light border-2 border-charcoal/20 rounded-lg p-8 space-y-6 "
>
  <h4
    class="font-playfair text-2xl font-bold text-forest text-center"
  >
    The IHP Model: Integrated Humanities
  </h4>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-6"
  >
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-forest"
      >
        What They Study:
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Homer, Virgil, Dante
        </li>
        <li>
          Gregorian chant, polyphony
        </li>
        <li>
          Plato, Aristotle, Aquinas
        </li>
        <li>
          Sacred art (Byzantine, medieval)
        </li>
        <li>
          Natural philosophy before modern science
        </li>
      </ul>
    </div>
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-forest"
      >
        What They Don't Study (Yet):
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Career-focused majors
        </li>
        <li>
          Modern political theory
        </li>
        <li>
          Specialized STEM tracks
        </li>
        <li>
          Pop culture or current events
        </li>
        <li>
          Anything divorced from liturgical context
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`StudyGrid Snapshots matches snapshot without optional props 1`] = `
<div
  class="bg-parchment-light border-2 border-charcoal/20 rounded-lg p-8 space-y-6 "
>
  <h4
    class="font-playfair text-2xl font-bold text-forest text-center"
  >
    The IHP Model: Integrated Humanities
  </h4>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-6"
  >
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-forest"
      >
        What They Study:
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Homer, Virgil, Dante
        </li>
        <li>
          Gregorian chant, polyphony
        </li>
        <li>
          Plato, Aristotle, Aquinas
        </li>
        <li>
          Sacred art (Byzantine, medieval)
        </li>
        <li>
          Natural philosophy before modern science
        </li>
      </ul>
    </div>
    <div
      class="space-y-3"
    >
      <h5
        class="font-playfair text-lg font-bold text-forest"
      >
        What They Don't Study (Yet):
      </h5>
      <ul
        class="text-base text-charcoal/90 space-y-1 list-disc list-inside"
      >
        <li>
          Career-focused majors
        </li>
        <li>
          Modern political theory
        </li>
        <li>
          Specialized STEM tracks
        </li>
        <li>
          Pop culture or current events
        </li>
        <li>
          Anything divorced from liturgical context
        </li>
      </ul>
    </div>
  </div>
</div>
`;
